feat: portfolio fix

--- a/src/assets/css/theme.css
+++ b/src/assets/css/theme.css
@@ -1,18 +1,18 @@
 :root {
   --alert-color: #444444; /* 어두운 경고 색상 */
-  --primary-highlight-color: #FFB2B2; /* 메인 강조 색상 */
+  --primary-highlight-color: #3DC2EC;  /* 메인 강조 색상 */
   --secondary-highlight-color: #444444; /* 보조 강조 색상 */
 
-  --main-bg-color: #848484; /* 메인 배경 색상 */
-  --portfolio-bg-color: #848484; /* 포트폴리오 배경 색상 */
+  --main-bg-color: #FFF5CD; /* 메인 배경 색상 */
+  --portfolio-bg-color: #FFD7C4; /* 포트폴리오 배경 색상 */
 
-  --secondary-bg-color: #3d3d3d; /* 보조 배경 색상 */
-  --contribution-bg-color: #444444; /* 기여도 배경 색상 */
+  --secondary-bg-color: #C4D7FF; /* 보조 배경 색상 */
+  --contribution-bg-color: #FFD7C4; /* 기여도 배경 색상 */
 
-  --header-footer-color: #050505; /* 헤더와 푸터 색상 */
+  --header-footer-color: #B7E0FF;/* 헤더와 푸터 색상 */
 
   /* 폰트컬러 */
-  --font-color: #e0e0e0; /* 기본 폰트 색상 */
-  --font-color2: #cccccc; /* 보조 폰트 색상 */
-  --font-color3: #ffffff; /* 강조된 폰트 색상 */
+  --font-color: #000000; /* 기본 폰트 색상 */
+  --font-color2: #000000; /* 보조 폰트 색상 */
+  --font-color3: #444444; /* 강조된 폰트 색상 */
 }
